--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>babby's first github site</h1>
-    <h2><a href="../thailand_website/HTML/home.html"> Thailand Website</a></h2>
+    <h2><a href="./thailand_website/HTML/home.html"> Thailand Website</a></h2>
 </body>
 </html>
