--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>It works?</title>
+    <title>babby's first website</title>
 </head>
 <body>
-    <h1>babby's first github site</h1>
-    <h2><a href="./thailand_website/HTML/home.html"> Thailand Website</a></h2>
+    <ul>
+    <li><h1><a href="./thailand_website/HTML/home.html"> Come2Thailand </a></h1></li>
+    </ul>
 </body>
 </html>
