--- a/thailand_website/HTML/activities.html
+++ b/thailand_website/HTML/activities.html
@@ -35,27 +35,24 @@
         <!-- Activities Grid -->
         <div class="activities-grid">
             <!-- Activity Items -->
+
             <div class="activity-item">
                 <img src="../img/gallery/load_error.jpg" alt="placeholder">
                 <div class="activity-text">
-                    <h3>Spa Retreats</h3>
-                    <p>Relax and rejuvenate with traditional Thai massages and wellness therapies.</p>
+                        <h3>Cooking Classes</h3>
+                        <p>There’s no better way to get acquainted with Thai culture than during a cooking class in Bangkok.<br>
+                        Master the art of some classic Thai dishes—including pad Thai noodles and red Thai curry—and overcome the language barrier during a market tour.<br>This experience proves ideal for food lovers and first-time visitors.</p>
                 </div>
             </div>
+
             <div class="activity-item">
                 <img src="../img/gallery/load_error.jpg" alt="placeholder">
                 <div class="activity-text">
-                    <h3>Water Sports</h3>
-                    <p>Experience jet skiing, snorkeling, and parasailing along pristine beaches.</p>
+                    <h3>National Parks</h3>
+                    <p>Thailand is gifted with some of the oldest virgin woodlands in the world.</p>
                 </div>
             </div>
-            <div class="activity-item">
-                <img src="../img/gallery/load_error.jpg" alt="placeholder">
-                <div class="activity-text">
-                    <h3>Jungle Treks</h3>
-                    <p>Embark on guided hikes through lush rainforests and discover hidden waterfalls.</p>
-                </div>
-            </div>
+
             <div class="activity-item">
                 <img src="../img/gallery/load_error.jpg" alt="placeholder">
                 <div class="activity-text">
@@ -63,48 +60,24 @@
                     <p>Explore ancient temples and bustling markets to immerse yourself in Thai culture.</p>
                 </div>
             </div>
+
             <div class="activity-item">
                 <img src="../img/gallery/load_error.jpg" alt="placeholder">
                 <div class="activity-text">
-                    <h3>Full Moon Party</h3>
-                    <p>Join the legendary beach party on Koh Phangan for music, dancing, and neon paint.</p>
+                    <h3>Visit the Night Markets</h3>
+                    <p>Thailand is home to some of the most vibrant night-markets in the world.</p>
                 </div>
             </div>
-            <div class="activity-item">
-                <img src="../img/gallery/load_error.jpg" alt="placeholder">
-                <div class="activity-text">
-                    <h3>Scuba Diving</h3>
-                    <p>Dive into crystal-clear waters and explore vibrant coral reefs and marine life.</p>
-                </div>
-            </div>
-            <div class="activity-item">
-                <img src="../img/gallery/load_error.jpg" alt="placeholder">
-                <div class="activity-text">
-                    <h3>Night Markets</h3>
-                    <p>Shop for unique souvenirs and savor street food at vibrant night markets.</p>
-                </div>
-            </div>
+
             <div class="activity-item">
                 <img src="../img/gallery/load_error.jpg" alt="placeholder">
                 <div class="activity-text">
                     <h3>Elephant Sanctuaries</h3>
                     <p>Interact responsibly with rescued elephants in ethical sanctuaries.</p>
+                    <p>(Please make sure to verify if the sanctuary is an ethical one)</p>
                 </div>
             </div>
-            <div class="activity-item">
-                <img src="../img/gallery/load_error.jpg" alt="placeholder">
-                <div class="activity-text">
-                    <h3>Cooking Classes</h3>
-                    <p>Learn to cook authentic Thai dishes with local chefs.</p>
-                </div>
-            </div>
-            <div class="activity-item">
-                <img src="../img/gallery/load_error.jpg" alt="placeholder">
-                <div class="activity-text">
-                    <h3>Rock Climbing</h3>
-                    <p>Test your limits on the famous limestone cliffs of Krabi.</p>
-                </div>
-            </div>
+
             <div class="activity-item">
                 <img src="../img/gallery/load_error.jpg" alt="placeholder">
                 <div class="activity-text">
@@ -112,6 +85,7 @@
                     <p>Paddle through mangroves and sea caves in Phuket and Krabi.</p>
                 </div>
             </div>
+
             <div class="activity-item">
                 <img src="../img/gallery/load_error.jpg" alt="placeholder">
                 <div class="activity-text">
@@ -119,6 +93,7 @@
                     <p>Experience buzzing nightlife in Bangkok and Pattaya with clubs, bars, and rooftop lounges.</p>
                 </div>
             </div>
+
             <div class="activity-item">
                 <img src="../img/gallery/load_error.jpg" alt="placeholder">
                 <div class="activity-text">
@@ -126,13 +101,7 @@
                     <p>Enjoy unique shopping experiences on boats at floating markets like Damnoen Saduak.</p>
                 </div>
             </div>
-            <div class="activity-item">
-                <img src="../img/gallery/load_error.jpg" alt="placeholder">
-                <div class="activity-text">
-                    <h3>Ziplining</h3>
-                    <p>Glide through treetops for breathtaking views in Chiang Mai.</p>
-                </div>
-            </div>
+
             <div class="activity-item">
                 <img src="../img/gallery/load_error.jpg" alt="placeholder">
                 <div class="activity-text">
@@ -140,6 +109,7 @@
                     <p>Take a Muay Thai class or watch live fights for an adrenaline rush.</p>
                 </div>
             </div>
+
             <div class="activity-item">
                 <img src="../img/gallery/load_error.jpg" alt="placeholder">
                 <div class="activity-text">
@@ -147,13 +117,15 @@
                     <p>Visit stunning islands like Koh Phi Phi, Koh Samui, and Koh Tao.</p>
                 </div>
             </div>
+
             <div class="activity-item">
                 <img src="../img/gallery/load_error.jpg" alt="placeholder">
                 <div class="activity-text">
-                    <h3>Longtail Boat Tours</h3>
+                    <h3>Canal-boat restaurants</h3>
                     <p>Explore scenic coastlines and hidden beaches on a traditional longtail boat.</p>
                 </div>
             </div>
+
             <div class="activity-item">
                 <img src="../img/gallery/load_error.jpg" alt="placeholder">
                 <div class="activity-text">
@@ -161,22 +133,6 @@
                     <p>Enjoy breathtaking sunrise views over Chiang Mai’s countryside.</p>
                 </div>
             </div>
-            <div class="activity-item">
-                <img src="../img/gallery/load_error.jpg" alt="placeholder">
-                <div class="activity-text">
-                    <h3>Yoga Retreats</h3>
-                    <p>Find inner peace with yoga and meditation in tranquil settings.</p>
-                </div>
-            </div>
-            <div class="activity-item">
-                <img src="../img/gallery/load_error.jpg" alt="placeholder">
-                <div class="activity-text">
-                    <h3>Surfing</h3>
-                    <p>Catch waves and learn surfing on beaches like Kata and Nai Harn.</p>
-                </div>
-            </div>
-        </div>
-    </section>
     
     <!-- Footer Section -->
     <footer>
