--- a/thailand_website/HTML/home.html
+++ b/thailand_website/HTML/home.html
@@ -15,10 +15,10 @@
     </head>
     <body>
 
-
         <!-- This is the navigation section  -->
         <section>
             <nav class="navbar">
+                <h1 contenteditable>Come<span style="color: hsl(163, 37%, 40%)">2</span>Thailand</h1>
                 <ul>
                     <li><a href="home.html">             Home </a></li>
                     <li><a href="destinations.html">     Destinations </a></li>
@@ -28,6 +28,7 @@
                 </ul>
             </nav>
         </section>
+
 
         <!-- This is the header section  -->
         <div class="container">
