--- a/thailand_website/HTML/activities.html
+++ b/thailand_website/HTML/activities.html
@@ -14,6 +14,8 @@
     <!-- Navigation Section -->
     <section>
         <nav class="navbar">
+            <h1 contenteditable>Come<span style="color: hsl(163, 37%, 40%)">2</span>Thailand</h1>
+
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="destinations.html">Destinations</a></li>
