--- a/thailand_website/HTML/home.html
+++ b/thailand_website/HTML/home.html
@@ -2,65 +2,76 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="description" content="Come to Thailand 2026 is a free travel website with the purpose of providing important information to anyone interested traveling to Thailand">
-        <meta name="keywords" content="Thailand, Travel, Travel-guide,Thailand travel, Thailand holiday, holiday, thailand holiday, thailand destinations, thailand activities, thailand festivals, festivals, visit thailand, come to thailand, thailand 2026">
+        <meta name="description" content="Come to Thailand 2026 is a free travel website with the purpose of providing important information to anyone interested traveling to Thailand.">
+        <meta name="keywords" content="Thailand, Travel, Travel Guide, Thailand Travel, Thailand Holiday, Holiday, Thailand Destinations, Thailand Activities, Thailand Festivals, Visit Thailand, Come to Thailand 2026">
         <meta name="author" content="DK">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Come to Thailand</title>
-        <link type="text/css" rel="stylesheet" href="../CSS/style.css" />
+        <title>Come to Thailand 2026 | Travel Guide</title>
+        <link rel="stylesheet" href="../CSS/style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/d085fdf720.js" crossorigin="anonymous"></script>
     </head>
     <body>
-
-        <!-- This is the navigation section  -->
-        <section>
-            <nav class="navbar">
-                <h1 contenteditable>Come<span style="color: hsl(163, 37%, 40%)">2</span>Thailand</h1>
-                <ul>
-                    <li><a href="home.html">             Home </a></li>
-                    <li><a href="destinations.html">     Destinations </a></li>
-                    <li><a href="activities.html">       Activities </a></li>
-                    <li><a href="events.html">           Events </a></li>
-                    <li><a href="gallery.html">          Gallery </a></li>
+        <!-- Navigation Section -->
+        <header>
+            <nav class="navbar" aria-label="Main Navigation">
+                <h1>
+                    Come<span style="color: hsl(163, 37%, 40%)">2</span>Thailand
+                </h1>
+                <button class="hamburger" aria-label="Menu">
+                    <i class="fa-solid fa-bars"></i>
+                </button>
+                <ul class="nav-links">
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="destinations.html">Destinations</a></li>
+                    <li><a href="activities.html">Activities</a></li>
+                    <li><a href="events.html">Events</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
                 </ul>
             </nav>
-        </section>
+        </header>
 
+        <!-- Hero Section -->
+        <main>
+            <section class="container">
+                <div class="container-headings" id="home-headings">
+                    <h1>Come to Thailand - 2026</h1>
+                    <h2>Your dream holiday starts here!</h2>
+                </div>
+                <div class="button-container">
+                    <a href="destinations.html" aria-label="Explore Destinations">
+                        <button>Start Your Journey</button>
+                    </a>
+                </div>
+            </section>
+        </main>
 
-        <!-- This is the header section  -->
-        <div class="container">
-            <div class="container-headings" id="home-headings">
-                <h1>Come to Thailand - 2026</h1>
-                <h2>Get ready for your dream holiday!</h2>
-            </div>
-            <div class="button-container">
-                <a href="destinations.html"><button>Start your Journey</button></a>
-            </div>
-        </div>
-
-
-
-        <!-- This is the footer section  -->
+        <!-- Footer Section -->
         <footer>
             <div class="footer-content">
                 <p>&copy; 2024 Come to Thailand. All rights reserved.</p>
                 <ul class="footer-links">
-                    <li><a href="home.html">             Home</a></li>
-                    <li><a href="contact.html">          Contact </a></li>
-                    <li><a href="info.html">             About Us </a></li>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="info.html">About Us</a></li>
                 </ul>
                 <p class="footer-social">
-                    <a href="http://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="http://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="http://www.x.com"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="https://www.facebook.com" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.x.com" aria-label="Twitter"><i class="fa-brands fa-x-twitter"></i></a>
                 </p>
             </div>
         </footer>
 
+        <script>
+            const hamburger = document.querySelector('.hamburger');
+            const navLinks = document.querySelector('.nav-links');
 
-
+            hamburger.addEventListener('click', () => {
+                navLinks.classList.toggle('show');
+            });
+        </script>
     </body>
-</html> 
+</html>
