--- a/thailand_website/HTML/destination_pages/Phi_Phi.html
+++ b/thailand_website/HTML/destination_pages/Phi_Phi.html
@@ -13,11 +13,15 @@
 <body>
 
     <!-- Navigation Section -->
-    <section>
-        <nav class="navbar">
-            <h1 contenteditable>Come<span style="color: hsl(163, 37%, 40%)">2</span>Thailand</h1>
-
-            <ul>
+    <header>
+        <nav class="navbar" aria-label="Main Navigation">
+            <a href="home.html"><h1>
+                Come<span style="color: hsl(163, 37%, 40%)">2</span>Thailand
+            </h1></a>
+            <button class="hamburger" aria-label="Menu">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+            <ul class="nav-links">
                 <li><a href="../home.html">Home</a></li>
                 <li><a href="../destinations.html">Destinations</a></li>
                 <li><a href="../activities.html">Activities</a></li>
@@ -25,7 +29,7 @@
                 <li><a href="../gallery.html">Gallery</a></li>
             </ul>
         </nav>
-    </section>
+    </header>
 
     <!-- Main Page Section -->
     <section class="page" id="#location_page">
@@ -93,5 +97,6 @@
 
     <script src="../../JS/image_enlarge.js"></script>
     <script src="../../JS/gallery_scroll.js"></script>
+    <script src="../../JS/hamburger_button.js"></script>
 </body>
 </html>
