--- a/thailand_website/HTML/destinations.html
+++ b/thailand_website/HTML/destinations.html
@@ -14,20 +14,23 @@
 
 
         <!-- This is the navigation section  -->
-
-        <section>
-            <nav class="navbar">
-                <h1 contenteditable>Come<span style="color: hsl(163, 37%, 40%)">2</span>Thailand</h1>
-
-                <ul>
-                    <li><a href="home.html">             Home </a></li>
-                    <li><a href="destinations.html">     Destinations </a></li>
-                    <li><a href="activities.html">       Activities </a></li>
-                    <li><a href="events.html">           Events </a></li>
-                    <li><a href="gallery.html">          Gallery </a></li>
+        <header>
+            <nav class="navbar" aria-label="Main Navigation">
+                <a href="home.html"><h1>
+                    Come<span style="color: hsl(163, 37%, 40%)">2</span>Thailand
+                </h1></a>
+                <button class="hamburger" aria-label="Menu">
+                    <i class="fa-solid fa-bars"></i>
+                </button>
+                <ul class="nav-links">
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="destinations.html">Destinations</a></li>
+                    <li><a href="activities.html">Activities</a></li>
+                    <li><a href="events.html">Events</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
                 </ul>
             </nav>
-        </section>
+        </header>
 
 
 
@@ -162,5 +165,6 @@
             </div>
         </footer>
 
+        <script src="../JS/hamburger_button.js"></script>
     </body>
 </html> 
