--- a/thailand_website/HTML/home.html
+++ b/thailand_website/HTML/home.html
@@ -17,9 +17,9 @@
         <!-- Navigation Section -->
         <header>
             <nav class="navbar" aria-label="Main Navigation">
-                <h1>
+                <a href="home.html"><h1>
                     Come<span style="color: hsl(163, 37%, 40%)">2</span>Thailand
-                </h1>
+                </h1></a>
                 <button class="hamburger" aria-label="Menu">
                     <i class="fa-solid fa-bars"></i>
                 </button>
@@ -33,11 +33,11 @@
             </nav>
         </header>
 
-        <!-- Hero Section -->
+        <!-- Main Section -->
         <main>
             <section class="container">
                 <div class="container-headings" id="home-headings">
-                    <h1>Come to Thailand - 2026</h1>
+                    <h1>Come<span style="color: hsl(163, 37%, 40%)">2</span>Thailand - 2026</h1>
                     <h2>Your dream holiday starts here!</h2>
                 </div>
                 <div class="button-container">
@@ -65,13 +65,6 @@
             </div>
         </footer>
 
-        <script>
-            const hamburger = document.querySelector('.hamburger');
-            const navLinks = document.querySelector('.nav-links');
-
-            hamburger.addEventListener('click', () => {
-                navLinks.classList.toggle('show');
-            });
-        </script>
+        <script src="../JS/hamburger_button.js"></script>
     </body>
 </html>
