--- a/thailand_website/HTML/home.html
+++ b/thailand_website/HTML/home.html
@@ -38,11 +38,32 @@
             <section class="container">
                 <div class="container-headings" id="home-headings">
                     <h1>Come<span style="color: hsl(163, 37%, 40%)">2</span>Thailand - 2026</h1>
-                    <h2>Your dream holiday starts here!</h2>
+                    <h2>Your dream holiday starts in...</h2>
                 </div>
+
+                <!-- Countdown Timer -->
+                <div id="countdown">
+                    <div class="countdown-segment">
+                        <span class="countdown-number" id="days">0</span>
+                        <span class="countdown-label">Days</span>
+                    </div>
+                    <div class="countdown-segment">
+                        <span class="countdown-number" id="hours">0</span>
+                        <span class="countdown-label">Hours</span>
+                    </div>
+                    <div class="countdown-segment">
+                        <span class="countdown-number" id="minutes">0</span>
+                        <span class="countdown-label">Minutes</span>
+                    </div>
+                    <div class="countdown-segment">
+                        <span class="countdown-number" id="seconds">0</span>
+                        <span class="countdown-label">Seconds</span>
+                    </div>
+                </div>
+
                 <div class="button-container">
                     <a href="destinations.html" aria-label="Explore Destinations">
-                        <button>Start Your Journey</button>
+                        <button>Plan Your Journey</button>
                     </a>
                 </div>
             </section>
@@ -64,7 +85,7 @@
                 </p>
             </div>
         </footer>
-
+        <script src="../JS/countdown.js"></script>
         <script src="../JS/hamburger_button.js"></script>
     </body>
 </html>
