--- a/thailand_website/HTML/activities.html
+++ b/thailand_website/HTML/activities.html
@@ -143,7 +143,7 @@
     <!-- Footer Section -->
     <footer>
         <div class="footer-content">
-            <p>&copy; 2024 Come to Thailand. All rights reserved.</p>
+            <p>&copy; 2024 Come2Thailand. All rights reserved.</p>
             <ul class="footer-links">
                 <li><a href="home.html">             Home</a></li>
                 <li><a href="contact.html">          Contact </a></li>
