--- a/thailand_website/HTML/destination_pages/Koh_Tao.html
+++ b/thailand_website/HTML/destination_pages/Koh_Tao.html
@@ -49,8 +49,13 @@
                     <img src="../../img/gallery/koh_tao_2.jpg" alt="Scuba Diving in Koh Tao" onerror="this.src='../../img/gallery/load_error.jpg';">
                     <img src="../../img/gallery/koh_tao_3.jpg" alt="John-Suwan Viewpoint" onerror="this.src='../../img/gallery/load_error.jpg';">
                     <img src="../../img/gallery/koh_tao_4.jpg" alt="Shark Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/koh_tao_5.jpg" alt="Koh Nang Yuan Island" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/koh_tao_6.jpg" alt="Mae Haad Pier" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/koh_tao_5.webp" alt="Koh Nang Yuan Island" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/koh_tao_6.webp" alt="Mae Haad Pier" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/koh_tao_7.jpg" alt="Mae Haad Pier" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/koh_tao_8.webp" alt="Mae Haad Pier" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/koh_tao_9.webp" alt="Mae Haad Pier" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/koh_tao_10.webp" alt="Mae Haad Pier" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/koh_tao_13.webp" alt="Mae Haad Pier" onerror="this.src='../../img/gallery/load_error.jpg';">
                 </div>
                 <button class="scroll-btn scroll-right" aria-label="Scroll right"></button>
             </div>
