--- a/thailand_website/HTML/destination_pages/Krabi.html
+++ b/thailand_website/HTML/destination_pages/Krabi.html
@@ -45,12 +45,20 @@
             <div class="gallery-container">
                 <button class="scroll-btn scroll-left" aria-label="Scroll left"></button>
                 <div class="gallery-scroll">
-                    <img src="../../img/gallery/krabi_1.jpg" alt="Railay Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/krabi_2.jpg" alt="Phi Phi Islands" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/krabi_3.jpg" alt="Emerald Pool" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/krabi_1.jpeg" alt="Railay Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/krabi_2.webp" alt="Phi Phi Islands" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/krabi_3.webp" alt="Emerald Pool" onerror="this.src='../../img/gallery/load_error.jpg';">
                     <img src="../../img/gallery/krabi_4.jpg" alt="Tiger Cave Temple" onerror="this.src='../../img/gallery/load_error.jpg';">
                     <img src="../../img/gallery/krabi_5.jpg" alt="Hong Island" onerror="this.src='../../img/gallery/load_error.jpg';">
                     <img src="../../img/gallery/krabi_6.jpg" alt="Ao Nang Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/krabi_7.jpg" alt="Ao Nang Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/krabi_8.webp" alt="Ao Nang Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/krabi_9.webp" alt="Ao Nang Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/krabi_10.jpg" alt="Ao Nang Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/krabi_11.jpg" alt="Ao Nang Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/krabi_12.jpg" alt="Ao Nang Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/krabi_13.webp" alt="Ao Nang Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/krabi_14.jpg" alt="Ao Nang Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
                 </div>
                 <button class="scroll-btn scroll-right" aria-label="Scroll right"></button>
             </div>
