--- a/thailand_website/HTML/destination_pages/Phi_Phi.html
+++ b/thailand_website/HTML/destination_pages/Phi_Phi.html
@@ -45,12 +45,18 @@
             <div class="gallery-container">
                 <button class="scroll-btn scroll-left" aria-label="Scroll left"></button>
                 <div class="gallery-scroll">
-                    <img src="../../img/gallery/phi_phi_1.jpg" alt="Maya Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/phi_phi_1.webp" alt="Maya Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
                     <img src="../../img/gallery/phi_phi_2.jpg" alt="Longtail Boats on the Beach" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/phi_phi_3.jpg" alt="Viking Cave" onerror="this.src='../../img/gallery/load_error.jpg';">
                     <img src="../../img/gallery/phi_phi_4.jpg" alt="Phi Phi Viewpoint" onerror="this.src='../../img/gallery/load_error.jpg';">
                     <img src="../../img/gallery/phi_phi_5.jpg" alt="Snorkeling in Clear Waters" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/phi_phi_6.jpg" alt="Nightlife at Tonsai Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/phi_phi_6.webp" alt="Nightlife at Tonsai Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/phi_phi_7.jpg" alt="Nightlife at Tonsai Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/phi_phi_8.webp" alt="Nightlife at Tonsai Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/phi_phi_9.webp" alt="Nightlife at Tonsai Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/phi_phi_10.jpg" alt="Nightlife at Tonsai Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/phi_phi_11.jpg" alt="Nightlife at Tonsai Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/phi_phi_12.jpg" alt="Nightlife at Tonsai Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/phi_phi_13.jpg" alt="Nightlife at Tonsai Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
                 </div>
                 <button class="scroll-btn scroll-right" aria-label="Scroll right"></button>
             </div>
