--- a/thailand_website/HTML/destination_pages/Phuket.html
+++ b/thailand_website/HTML/destination_pages/Phuket.html
@@ -15,7 +15,7 @@
     <!-- Navigation Section -->
     <header>
         <nav class="navbar" aria-label="Main Navigation">
-            <a href="home.html"><h1>
+            <a href="../home.html"><h1>
                 Come<span style="color: hsl(163, 37%, 40%)">2</span>Thailand
             </h1></a>
             <button class="hamburger" aria-label="Menu">
@@ -47,10 +47,17 @@
                 <div class="gallery-scroll">
                     <img src="../../img/gallery/phuket_1.jpg" alt="Patong Beach at Sunset" onerror="this.src='../../img/gallery/load_error.jpg';">
                     <img src="../../img/gallery/phuket_2.jpg" alt="Big Buddha of Phuket" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/phuket_3.jpg" alt="Old Phuket Town" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/phuket_3.webp" alt="Old Phuket Town" onerror="this.src='../../img/gallery/load_error.jpg';">
                     <img src="../../img/gallery/phuket_4.jpg" alt="Phi Phi Islands Tour" onerror="this.src='../../img/gallery/load_error.jpg';">
-                    <img src="../../img/gallery/phuket_5.jpg" alt="Phang Nga Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/phuket_5.webp" alt="Phang Nga Bay" onerror="this.src='../../img/gallery/load_error.jpg';">
                     <img src="../../img/gallery/phuket_6.jpg" alt="Karon Viewpoint" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/phuket_7.jpeg" alt="Karon Viewpoint" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/phuket_8.webp" alt="Karon Viewpoint" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/phuket_9.jpg" alt="Karon Viewpoint" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/phuket_10.jpg" alt="Karon Viewpoint" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/phuket_11.jpg" alt="Karon Viewpoint" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/phuket_12.webp" alt="Karon Viewpoint" onerror="this.src='../../img/gallery/load_error.jpg';">
+                    <img src="../../img/gallery/phuket_13.jpg" alt="Karon Viewpoint" onerror="this.src='../../img/gallery/load_error.jpg';">
                 </div>
                 <button class="scroll-btn scroll-right" aria-label="Scroll right"></button>
             </div>
