--- a/thailand_website/HTML/destination_pages/Kanchanaburi.html
+++ b/thailand_website/HTML/destination_pages/Kanchanaburi.html
@@ -16,7 +16,7 @@
         <!-- This is the navigation section  -->
         <header>
             <nav class="navbar" aria-label="Main Navigation">
-                <a href="home.html"><h1>
+                <a href="../home.html"><h1>
                     Come<span style="color: hsl(163, 37%, 40%)">2</span>Thailand
                 </h1></a>
                 <button class="hamburger" aria-label="Menu">
