--- a/thailand_website/HTML/destination_pages/Phuket.html
+++ b/thailand_website/HTML/destination_pages/Phuket.html
@@ -40,6 +40,19 @@
             <h3>The Pearl of the Andaman</h3>
         </div>
 
+        <!-- Dropdown Section -->
+        <div class="map-dropdown">
+            <button class="dropdown-toggle">View Map</button>
+            <div class="dropdown-content">
+
+                <!-- Google Map Section -->
+                <div class="google_map_container">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31616.89932110919!2d98.37136898536957!3d7.883305846900082!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x305031fd2d6380a3%3A0x8df88000bd82f66b!2sPhuket%2C%20Mueang%20Phuket%20District%2C%20Phuket%2083000%2C%20Thailand!5e0!3m2!1sen!2suk!4v1733464988976!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                
+            </div>
+        </div>
+
         <!-- Gallery Section -->
         <div id="image-gallery">
             <div class="gallery-container">
@@ -103,6 +116,7 @@
         </div>
     </footer>
 
+    <script src="../../JS/map_dropdown.js"></script>
     <script src="../../JS/image_enlarge.js"></script>
     <script src="../../JS/gallery_scroll.js"></script>
     <script src="../../JS/hamburger_button.js"></script>
