--- a/thailand_website/HTML/destination_pages/Khao_Yai.html
+++ b/thailand_website/HTML/destination_pages/Khao_Yai.html
@@ -40,6 +40,20 @@
             <h3>Thailand's Nature Retreat</h3>
         </div>
 
+
+        <!-- Dropdown Section -->
+        <div class="map-dropdown">
+            <button class="dropdown-toggle">View Map</button>
+            <div class="dropdown-content">
+
+                <!-- Google Map Section -->
+                <div class="google_map_container">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3866.0087756828166!2d101.525833447478!3d14.310922855617555!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x311c2a495f2143d7%3A0x14b500fc4f22bfc!2sKhao%20Yai%20National%20Park!5e0!3m2!1sen!2suk!4v1733464829934!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                
+            </div>
+        </div>
+
         <!-- Gallery Section -->
         <div id="image-gallery">
             <div class="gallery-container">
@@ -100,6 +114,7 @@
         </div>
     </footer>
 
+    <script src="../../JS/map_dropdown.js"></script>
     <script src="../../JS/image_enlarge.js"></script>
     <script src="../../JS/gallery_scroll.js"></script>
     <script src="../../JS/hamburger_button.js"></script>
