--- a/thailand_website/HTML/destination_pages/Koh_Larn.html
+++ b/thailand_website/HTML/destination_pages/Koh_Larn.html
@@ -40,6 +40,19 @@
             <h3>The Coral Island Getaway</h3>
         </div>
 
+
+        <!-- Dropdown Section -->
+        <div class="map-dropdown">
+            <button class="dropdown-toggle">View Map</button>
+            <div class="dropdown-content">
+
+                <!-- Google Map Section -->
+                <div class="google_map_container">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15555.387856495234!2d100.76798426040914!3d12.917555747443155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x310298386eef76d9%3A0x12b39d7dc3ae41ea!2sKo%20Lan!5e0!3m2!1sen!2suk!4v1733464876206!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                </div>
+                
+            </div>
+        </div>
+
         <!-- Gallery Section -->
         <div id="image-gallery">
             <div class="gallery-container">
@@ -97,6 +110,7 @@
         </div>
     </footer>
 
+    <script src="../../JS/map_dropdown.js"></script>
     <script src="../../JS/image_enlarge.js"></script>
     <script src="../../JS/gallery_scroll.js"></script>
     <script src="../../JS/hamburger_button.js"></script>
