--- a/thailand_website/HTML/destination_pages/Koh_Phangan.html
+++ b/thailand_website/HTML/destination_pages/Koh_Phangan.html
@@ -40,6 +40,21 @@
             <h3>The Island of Full Moon Parties and Tranquil Beaches</h3>
         </div>
 
+
+
+        <!-- Dropdown Section -->
+        <div class="map-dropdown">
+            <button class="dropdown-toggle">View Map</button>
+            <div class="dropdown-content">
+
+                <!-- Google Map Section -->
+                <div class="google_map_container">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62917.8682068159!2d99.97991963866856!3d9.734967171089695!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3054fd96fa0377ef%3A0xd3fd8d1a5e79affe!2sKo%20Pha%20Ngan!5e0!3m2!1sen!2suk!4v1733464898858!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                
+            </div>
+        </div>
+
         <!-- Gallery Section -->
         <div id="image-gallery">
             <div class="gallery-container">
@@ -100,6 +115,7 @@
         </div>
     </footer>
 
+    <script src="../../JS/map_dropdown.js"></script>
     <script src="../../JS/image_enlarge.js"></script>
     <script src="../../JS/gallery_scroll.js"></script>
     <script src="../../JS/hamburger_button.js"></script>
