--- a/thailand_website/HTML/destination_pages/Koh_Samui.html
+++ b/thailand_website/HTML/destination_pages/Koh_Samui.html
@@ -39,6 +39,20 @@
             <h3>The Tropical Paradise of Thailand</h3>
         </div>
 
+
+        <!-- Dropdown Section -->
+        <div class="map-dropdown">
+            <button class="dropdown-toggle">View Map</button>
+            <div class="dropdown-content">
+
+                <!-- Google Map Section -->
+                <div class="google_map_container">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d125922.81536772699!2d99.91884016147671!3d9.501077263291027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3054f1501c66266f%3A0xedd55abd3d7d8330!2sKo%20Samui!5e0!3m2!1sen!2suk!4v1733464913795!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                
+            </div>
+        </div>
+
         <!-- Gallery Section -->
         <div id="image-gallery">
             <div class="gallery-container">
@@ -97,6 +111,7 @@
         </div>
     </footer>
 
+    <script src="../../JS/map_dropdown.js"></script>
     <script src="../../JS/image_enlarge.js"></script>
     <script src="../../JS/gallery_scroll.js"></script>
     <script src="../../JS/hamburger_button.js"></script>
