--- a/thailand_website/HTML/destination_pages/Krabi.html
+++ b/thailand_website/HTML/destination_pages/Krabi.html
@@ -40,6 +40,20 @@
             <h3>The Gateway to Thailand's Andaman Coast</h3>
         </div>
 
+
+        <!-- Dropdown Section -->
+        <div class="map-dropdown">
+            <button class="dropdown-toggle">View Map</button>
+            <div class="dropdown-content">
+
+                <!-- Google Map Section -->
+                <div class="google_map_container">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d505633.9269751114!2d98.6836527657824!3d8.074426424755227!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30518d792d7f9309%3A0x10223bc2c364c90!2sKrabi%2C%20Thailand!5e0!3m2!1sen!2suk!4v1733464941712!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                
+            </div>
+        </div>
+
         <!-- Gallery Section -->
         <div id="image-gallery">
             <div class="gallery-container">
@@ -103,6 +117,7 @@
         </div>
     </footer>
 
+    <script src="../../JS/map_dropdown.js"></script>
     <script src="../../JS/image_enlarge.js"></script>
     <script src="../../JS/gallery_scroll.js"></script>
     <script src="../../JS/hamburger_button.js"></script>
