--- a/thailand_website/HTML/destination_pages/Phuket.html
+++ b/thailand_website/HTML/destination_pages/Phuket.html
@@ -15,7 +15,7 @@
     <!-- Navigation Section -->
     <header>
         <nav class="navbar" aria-label="Main Navigation">
-            <a href="home.html"><h1>
+            <a href="../home.html"><h1>
                 Come<span style="color: hsl(163, 37%, 40%)">2</span>Thailand
             </h1></a>
             <button class="hamburger" aria-label="Menu">
@@ -30,6 +30,7 @@
             </ul>
         </nav>
     </header>
+
 
     <!-- Main Page Section -->
     <section class="page" id="#location_page">
