added weather tab to every destination page + minor CSS fixes to body element

--- a/thailand_website/HTML/contact.html
+++ b/thailand_website/HTML/contact.html
@@ -60,7 +60,10 @@
         </div>
 
 
+        <div>
+            <a class="weatherwidget-io" href="https://forecast7.com/en/7d9598d34/phuket/" data-label_1="PHUKET" data-label_2="WEATHER" data-theme="original" >PHUKET WEATHER</a>
 
+        </div>
 
 
 
