--- a/thailand_website/HTML/destination_pages/Hua_Hin.html
+++ b/thailand_website/HTML/destination_pages/Hua_Hin.html
@@ -41,6 +41,8 @@
                 <h3>The Perfect Beach Escape</h3>
             </div>
 
+            <a class="weatherwidget-io" href="https://forecast7.com/en/12d5799d96/hua-hin/" data-label_1="HUA HIN" data-label_2="WEATHER" data-theme="gray" data-basecolor="#2d3234" >HUA HIN WEATHER</a>
+
 
             <!-- Dropdown Section -->
             <div class="map-dropdown">
@@ -115,6 +117,7 @@
             </div>
         </footer>
         
+        <script src="../../JS/weather_widget.js"></script>
         <script src="../../JS/map_dropdown.js"></script>
         <script src="../../JS/image_enlarge.js"></script>
         <script src="../../JS/gallery_scroll.js"></script>
