--- a/thailand_website/HTML/destination_pages/Kanchanaburi.html
+++ b/thailand_website/HTML/destination_pages/Kanchanaburi.html
@@ -41,6 +41,8 @@
                 <h3>Where History Meets Nature</h3>
             </div>
 
+            <a class="weatherwidget-io" href="https://forecast7.com/en/14d0299d53/kanchanaburi/" data-label_1="KANCHANABURI" data-label_2="WEATHER" data-theme="gray" data-basecolor="#2d3234" >KANCHANABURI WEATHER</a>
+
 
             <!-- Dropdown Section -->
             <div class="map-dropdown">
@@ -116,6 +118,7 @@
             </div>
         </footer>
 
+        <script src="../../JS/weather_widget.js"></script>
         <script src="../../JS/map_dropdown.js"></script>
         <script src="../../JS/image_enlarge.js"></script>
         <script src="../../JS/gallery_scroll.js"></script>
