--- a/thailand_website/HTML/destination_pages/Khao_Sok.html
+++ b/thailand_website/HTML/destination_pages/Khao_Sok.html
@@ -40,6 +40,7 @@
             <h3>Experience Thailand's Pristine Wilderness</h3>
         </div>
 
+        <a class="weatherwidget-io" href="https://forecast7.com/en/13d07101d42/khao-sok/" data-label_1="KHAO SOK" data-label_2="WEATHER" data-theme="gray" data-basecolor="#2d3234" >KHAO SOK WEATHER</a>
 
         <!-- Dropdown Section -->
         <div class="map-dropdown">
@@ -117,6 +118,7 @@
         </div>
     </footer>
 
+    <script src="../../JS/weather_widget.js"></script>
     <script src="../../JS/map_dropdown.js"></script>
     <script src="../../JS/image_enlarge.js"></script>
     <script src="../../JS/gallery_scroll.js"></script>
