--- a/thailand_website/HTML/destination_pages/Khao_Yai.html
+++ b/thailand_website/HTML/destination_pages/Khao_Yai.html
@@ -40,6 +40,7 @@
             <h3>Thailand's Nature Retreat</h3>
         </div>
 
+        <a class="weatherwidget-io" href="https://forecast7.com/en/12d7799d91/khao-yai/" data-label_1="KHAO YAI" data-label_2="WEATHER" data-theme="gray" data-basecolor="#2d3234" >KHAO YAI WEATHER</a>
 
         <!-- Dropdown Section -->
         <div class="map-dropdown">
@@ -114,6 +115,7 @@
         </div>
     </footer>
 
+    <script src="../../JS/weather_widget.js"></script>
     <script src="../../JS/map_dropdown.js"></script>
     <script src="../../JS/image_enlarge.js"></script>
     <script src="../../JS/gallery_scroll.js"></script>
