--- a/thailand_website/HTML/destination_pages/Koh_Lanta.html
+++ b/thailand_website/HTML/destination_pages/Koh_Lanta.html
@@ -40,6 +40,7 @@
             <h3>Island Paradise Unveiled</h3>
         </div>
 
+        <a class="weatherwidget-io" href="https://forecast7.com/en/7d6299d08/ko-lanta-district/" data-label_1="KO LANTA" data-label_2="WEATHER" data-theme="gray" data-basecolor="#2d3234" >KO LANTA WEATHER</a>
 
         <!-- Dropdown Section -->
         <div class="map-dropdown">
@@ -115,7 +116,7 @@
             </p>
         </div>
     </footer>
-
+    <script src="../../JS/weather_widget.js"></script>
     <script src="../../JS/map_dropdown.js"></script>
     <script src="../../JS/image_enlarge.js"></script>
     <script src="../../JS/gallery_scroll.js"></script>
