--- a/thailand_website/HTML/destination_pages/Koh_Samui.html
+++ b/thailand_website/HTML/destination_pages/Koh_Samui.html
@@ -21,11 +21,12 @@
             <button class="hamburger" aria-label="Menu">
                 <i class="fa-solid fa-bars"></i>
             </button>
-            <li><a href="../home.html">Home</a></li>
-            <li><a href="../destinations.html">Destinations</a></li>
-            <li><a href="../activities.html">Activities</a></li>
-            <li><a href="../events.html">Events</a></li>
-            <li><a href="../gallery.html">Gallery</a></li>
+            <ul class="nav-links">
+                <li><a href="../home.html">Home</a></li>
+                <li><a href="../destinations.html">Destinations</a></li>
+                <li><a href="../activities.html">Activities</a></li>
+                <li><a href="../events.html">Events</a></li>
+                <li><a href="../gallery.html">Gallery</a></li>
             </ul>
         </nav>
     </header>
@@ -38,6 +39,8 @@
             <h2>Koh Samui</h2>
             <h3>The Tropical Paradise of Thailand</h3>
         </div>
+
+        <a class="weatherwidget-io" href="https://forecast7.com/en/10d1099d83/ko-tao/" data-label_1="KO SAMUI" data-label_2="WEATHER" data-theme="gray" data-basecolor="#2d3234" >KO TAO WEATHER</a>
 
 
         <!-- Dropdown Section -->
@@ -111,6 +114,7 @@
         </div>
     </footer>
 
+    <script src="../../JS/weather_widget.js"></script>
     <script src="../../JS/map_dropdown.js"></script>
     <script src="../../JS/image_enlarge.js"></script>
     <script src="../../JS/gallery_scroll.js"></script>
