--- a/thailand_website/HTML/destination_pages/Krabi.html
+++ b/thailand_website/HTML/destination_pages/Krabi.html
@@ -40,6 +40,8 @@
             <h3>The Gateway to Thailand's Andaman Coast</h3>
         </div>
 
+        <a class="weatherwidget-io" href="https://forecast7.com/en/8d0998d91/krabi/" data-label_1="KRABI" data-label_2="WEATHER" data-theme="gray" data-basecolor="#2d3234" >KRABI WEATHER</a>
+
 
         <!-- Dropdown Section -->
         <div class="map-dropdown">
@@ -117,6 +119,7 @@
         </div>
     </footer>
 
+    <script src="../../JS/weather_widget.js"></script>
     <script src="../../JS/map_dropdown.js"></script>
     <script src="../../JS/image_enlarge.js"></script>
     <script src="../../JS/gallery_scroll.js"></script>
