--- a/thailand_website/HTML/destination_pages/Pattaya.html
+++ b/thailand_website/HTML/destination_pages/Pattaya.html
@@ -40,6 +40,8 @@
             <h3>The Vibrant Coastal City</h3>
         </div>
 
+        <a class="weatherwidget-io" href="https://forecast7.com/en/12d93100d88/pattaya-city/" data-label_1="PATTAYA" data-label_2="WEATHER" data-theme="gray" data-basecolor="#2d3234" >PATTAYA WEATHER</a>
+
 
         <!-- Dropdown Section -->
         <div class="map-dropdown">
@@ -114,6 +116,7 @@
         </div>
     </footer>
 
+    <script src="../../JS/weather_widget.js"></script>
     <script src="../../JS/map_dropdown.js"></script>
     <script src="../../JS/image_enlarge.js"></script>
     <script src="../../JS/gallery_scroll.js"></script>
