--- a/thailand_website/HTML/destination_pages/Bangkok.html
+++ b/thailand_website/HTML/destination_pages/Bangkok.html
@@ -41,6 +41,7 @@
                 <h3>The Vibrant Capital of Thailand</h3>
             </div>
 
+            <a class="weatherwidget-io" href="https://forecast7.com/en/13d76100d50/bangkok/" data-label_1="BANGKOK" data-label_2="WEATHER" data-theme="gray" data-basecolor="#2d3234" >BANGKOK WEATHER</a>
 
             <!-- Dropdown Section -->
             <div class="map-dropdown">
@@ -116,6 +117,7 @@
             </div>
         </footer>
         
+        <script src="../../JS/weather_widget.js"></script>
         <script src="../../JS/map_dropdown.js"></script>
         <script src="../../JS/image_enlarge.js"></script>
         <script src="../../JS/gallery_scroll.js"></script>
