--- a/thailand_website/HTML/destination_pages/Chiang_Mai.html
+++ b/thailand_website/HTML/destination_pages/Chiang_Mai.html
@@ -40,6 +40,7 @@
             <h3>The Cultural Heart of Northern Thailand</h3>
         </div>
 
+        <a class="weatherwidget-io" href="https://forecast7.com/en/18d7198d98/chiang-mai/" data-label_1="CHIANG MAI" data-label_2="WEATHER" data-theme="gray" data-basecolor="#2d3234" >CHIANG MAI WEATHER</a>
 
         <!-- Dropdown Section -->
         <div class="map-dropdown">
@@ -114,7 +115,8 @@
             </p>
         </div>
     </footer>
-        
+    
+    <script src="../../JS/weather_widget.js"></script>
     <script src="../../JS/map_dropdown.js"></script>
     <script src="../../JS/image_enlarge.js"></script>
     <script src="../../JS/gallery_scroll.js"></script>
