--- a/thailand_website/HTML/destination_pages/Koh_Larn.html
+++ b/thailand_website/HTML/destination_pages/Koh_Larn.html
@@ -40,6 +40,7 @@
             <h3>The Coral Island Getaway</h3>
         </div>
 
+        <a class="weatherwidget-io" href="https://forecast7.com/en/12d93100d88/pattaya-city/" data-label_1="KO LAN" data-label_2="WEATHER" data-theme="gray" data-basecolor="#2d3234" >PATTAYA WEATHER</a>
 
         <!-- Dropdown Section -->
         <div class="map-dropdown">
@@ -109,7 +110,7 @@
             </p>
         </div>
     </footer>
-
+    <script src="../../JS/weather_widget.js"></script>
     <script src="../../JS/map_dropdown.js"></script>
     <script src="../../JS/image_enlarge.js"></script>
     <script src="../../JS/gallery_scroll.js"></script>
