--- a/thailand_website/HTML/destination_pages/Koh_Phangan.html
+++ b/thailand_website/HTML/destination_pages/Koh_Phangan.html
@@ -41,6 +41,8 @@
         </div>
 
 
+        <a class="weatherwidget-io" href="https://forecast7.com/en/10d1099d83/ko-tao/" data-label_1="KO PHANGAN" data-label_2="WEATHER" data-theme="gray" data-basecolor="#2d3234" >KO TAO WEATHER</a>
+
 
         <!-- Dropdown Section -->
         <div class="map-dropdown">
@@ -115,6 +117,7 @@
         </div>
     </footer>
 
+    <script src="../../JS/weather_widget.js"></script>
     <script src="../../JS/map_dropdown.js"></script>
     <script src="../../JS/image_enlarge.js"></script>
     <script src="../../JS/gallery_scroll.js"></script>
