--- a/thailand_website/HTML/destination_pages/Phuket.html
+++ b/thailand_website/HTML/destination_pages/Phuket.html
@@ -41,6 +41,11 @@
             <h3>The Pearl of the Andaman</h3>
         </div>
 
+
+
+        <a class="weatherwidget-io" href="https://forecast7.com/en/7d9598d34/phuket/" data-label_1="PHUKET" data-label_2="WEATHER" data-theme="gray" data-basecolor="#2d3234" >PHUKET WEATHER</a>
+
+
         <!-- Dropdown Section -->
         <div class="map-dropdown">
             <button class="dropdown-toggle">View Map</button>
@@ -117,6 +122,7 @@
         </div>
     </footer>
 
+    <script src="../../JS/weather_widget.js"></script>
     <script src="../../JS/map_dropdown.js"></script>
     <script src="../../JS/image_enlarge.js"></script>
     <script src="../../JS/gallery_scroll.js"></script>
